[package]
name = "sdltest3"
version = "0.2.0"
edition = "2021"
authors = ["Gunnar Pietz <gpietz@posteo.de>"]

[dependencies]
rg3d-sound = "0.26"
legion = "0.4.0"
lazy_static = "1.4.0"
rand = "0.8.4"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
sdl2 = { version = "0.35.2", default_features = false, features = ["gfx", "image", "ttf"] }
